# libd2k

./: .gitignore  CMakeLists.txt  build.sh  config.h.in
cmake/modules/: FindCBase.cmake  FindMPDecimal.cmake
freedoom/: build_node_builder_wads.sh
lib/: CMakeLists.txt  alloc.h  angle.c  blockmap.c  d2k.h  d2k_internal.h  internal.h  map.c  wad.c  wad.h
lib/d2k/: angle.h  blockmap.h  fixed_math.h  fixed_vertex.h  line.h  map.h  map_object.h  map_object_info.h  map_object_type.h  map_sector_node.h  sector.h  sound_origin.h  sprite.h  thinker.h  wad.h
src/: blockmap.c  d2k.h  d2k_internal.h  map.c  map_blockmap.c  map_linedefs.c  map_loader.c  map_nodes.c  map_sectors.c  map_segs.c  map_sidedefs.c  map_subsectors.c  map_vertexes.c  wad.c
src/d2k/: angle.h  fixed_math.h  fixed_vertex.h  internal.h  map.h  map_blockmap.h  map_linedefs.h  map_loader.h  map_nodes.h  map_object.h  map_object_state.h  map_object_type.h  map_problem.h  map_sectors.h  map_segs.h  map_sidedefs.h  map_subsectors.h  map_things.h  map_vertexes.h  patch.h  texture.h  thinker.h  wad.h
test/: basic.c  blockmap.c  d2k_test.h  main.c  map.c  wad.c
